# FormAnalyzer

./: config.py  fill_db.py  main.py  make_testing_queries.py  pyproject.toml  requirements.txt  validators.py
docs/: README.md  TASK.MD
tests/: test_integration.py  test_validation.py
tests/fixtures/: date_formats.py  emails_fixture.py  forms.py  forms_for_db.json  phone_numbers.py
