[project]
name = "formanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.6",
    "motor>=3.6.0",
    "python-multipart>=0.0.19",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

